v1.10.14.4-dev # mensajes chat gestionados como bocadillos | +ajustes/correcciones